// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardStack snapshots Without child 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.c0 > div {
  margin: 10px 0;
}

.c0 > div:first-child {
  margin-top: 0;
}

.c0 > div:last-child {
  margin-bottom: 0;
}

<styled.div>
  <div
    className="c0"
  />
</styled.div>
`;

exports[`CardStack snapshots with > 1 child 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.c0 > div {
  margin: 10px 0;
}

.c0 > div:first-child {
  margin-top: 0;
}

.c0 > div:last-child {
  margin-bottom: 0;
}

<styled.div>
  <div
    className="c0"
  >
    <div>
      child 1
    </div>
    <div>
      child 2
    </div>
  </div>
</styled.div>
`;
